@@ -18,14 +18,24 @@ Test simple prime meridian handling.
 0d00'00.000"W 0d00'00.000"N 0.0	1dW	0dN 0.000
 79d00'00.000"W 45d00'00.000"N 0.0	80dW	45dN 0.000
 ##############################################################
+Test support for the lon_wrap switch.
+1d00'00.000"W 10d00'00.000"N 0.0	359dE	10dN 0.000
+0d00'00.000"W 10d00'00.000"N 0.0	360dE	10dN 0.000
+0d00'00.000"E 10d00'00.000"N 0.0	360dE	10dN 0.000
+1d00'00.000"E 45d00'00.000"N 0.0	1dE	45dN 0.000
+179d00'00.000"E 45d00'00.000"N 0.0	179dE	45dN 0.000
+181d00'00.000"E 45d00'00.000"N 0.0	181dE	45dN 0.000
+350d00'00.000"E 45d00'00.000"N 0.0	350dE	45dN 0.000
+370d00'00.000"E 45d00'00.000"N 0.0	10dE	45dN 0.000
+##############################################################
 Test simple prime meridian handling within a projection.
 500000 3000000	113dW	27d7'20.891"N 0.000
 ##############################################################
 Test geocentric x/y/z generation.
-0d00'00.000"W 0d00'00.000"N 0.0	6378137.00	-0.00 0.00
-0d00'00.000"W 0d00'00.000"N 10.0	6378147.00	-0.00 0.00
+0d00'00.000"W 0d00'00.000"N 0.0	6378137.00	0.00 0.00
+0d00'00.000"W 0d00'00.000"N 10.0	6378147.00	0.00 0.00
 79d00'00.000"W 45d00'00.000"N 0.0	861996.98	-4434590.01 4487348.41
-0d00'00.000"W 90d00'00.000"N 0.0	0.00	-0.00 6356752.31
+0d00'00.000"W 90d00'00.000"N 0.0	0.00	0.00 6356752.31
 ##############################################################
 Test geocentric x/y/z consumption.
 6378137.00      -0.00 0.00	0dE	0dN 0.000
